--- a/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
+++ b/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
@@ -704,7 +704,7 @@
                 </instance>
                 <instance type="mx_1_CTimer" uid="87">
                     <properties>
-                        <initial-visibility>Visible</initial-visibility>
+                        <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
@@ -726,7 +726,7 @@
                 </instance>
                 <instance type="mx_1_VTimer" uid="88">
                     <properties>
-                        <initial-visibility>Visible</initial-visibility>
+                        <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
@@ -748,7 +748,7 @@
                 </instance>
                 <instance type="mx_1_BTimer" uid="89">
                     <properties>
-                        <initial-visibility>Visible</initial-visibility>
+                        <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
@@ -770,7 +770,7 @@
                 </instance>
                 <instance type="mx_1_BTimer2" uid="90">
                     <properties>
-                        <initial-visibility>Visible</initial-visibility>
+                        <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
