--- a/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
+++ b/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
@@ -484,6 +484,7 @@
                     </properties>
                     <instance-variables>
                         <moneys>0</moneys>
+                        <yes>false</yes>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -509,6 +510,7 @@
                     </properties>
                     <instance-variables>
                         <moneys>0</moneys>
+                        <yes>false</yes>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
